refactor: 📦 update method patch
