# openapi-swagger.yaml
@@ -102,9 +102,15 @@ paths:
         '500':
           description: Internal Server Error
 
-  /customers/update:
+  /customers:
     patch:
       summary: Update customer
+      parameters:
+        - name: customerId
+          in: path
+          required: true
+          schema:
+            type: string
       requestBody:
         required: true
         content:
