# src/api/customerApi.ts
@@ -52,20 +52,19 @@ export class CustomerApi implements ICustomerApi {
     });
   }
 
-  async updateCustomer(customer: Partial<Customer>) {
-    if (!customer.id) {
+  async updateCustomer(customerId:string,body: Partial<Customer>) {
+    if (!customerId) {
       throw new Error("Customer ID is required");
     }
 
-    const customerExists = await this.findCustomer(customer.id);
+    const customerExists = await this.findCustomer(customerId);
     if (!customerExists) {
       throw new Error("Customer not found");
     }
 
-    const { id, ...rest } = customer;
     const customerUpdated = await prismaClient.customer.update({
-      where: { id },
-      data: { ...rest, updated_at: new Date() },
+      where: { id: customerId },
+      data: { ...body, updated_at: new Date() },
     });
 
     return CustomerSchema.parse(customerUpdated);
